# microgreensfw

./: .gitignore  LICENSE  README.md  license_notice
diagrams/: .$architecture.drawio.bkp  .$architecture.drawio.dtmp  architecture.drawio
src/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
src/main/: CMakeLists.txt  main.c
src/main/components/: http.c  hum_sensor.c  mqtt.c  outputs.c  stma.c  tasks.c  temp_sensor.c  temperature.c  web_server.c  wifi.c
src/main/components/dht11/: CMakeLists.txt
src/main/components/html/: index.html
src/main/components/include/: gpio_nums.h  http.h  http_prm.h  hum_sensor.h  hum_sensor_prm.h  mqtt_prm.h  my_mqtt.h  my_wifi.h  outputs.h  stma.h  tasks.h  temp_sensor.h  temperature.h  temperature_prm.h  web_page.h  web_server.h  wifi.h  wifi_prm.h
src/tests/: mqtt.js  package-lock.json  package.json
